k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lamarr-deployment
  labels:
    app: lamarr
spec:
  selector:
    matchLabels:
      app: lamarr
  template:
    metadata:
      labels:
        app: lamarr
    spec:
      containers:
        - name: lamarr
          image: localhost:5000/lamarr
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 7000
---
apiVersion: v1
kind: Service
metadata:
  name: lamarr-db
spec:
  type: ExternalName
  externalName: host.docker.internal
  ports:
    - port: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: lamarr-service
spec:
  selector:
    app: lamarr
  ports:
    - port: 7000
      targetPort: 7000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lamarr-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lamarr-service
                port:
                  number: 80
